Create and save cooccurenves

--- a/Data Processing Playground.ipynb
+++ b/Data Processing Playground.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "concrete-gallery",
+   "execution_count": 18,
+   "id": "handed-stability",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from collections import Counter\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
     "from preprocess import (\n",
     "    remove_punctuation,\n",
     "    split_sentences,\n",
@@ -19,26 +23,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "private-landscape",
+   "execution_count": 19,
+   "id": "fantastic-government",
    "metadata": {},
    "outputs": [],
    "source": [
     "# CONSTANTS\n",
     "CORPUS_PATH = './corpus'\n",
-    "SUFFIXES = get_suffixes()"
+    "SUFFIXES = get_suffixes()\n",
+    "WORDS_COUNT_FILE = 'words_count.txt'\n",
+    "PAIR_COOCCURENCES_FILE = 'pair_cooccurences.txt'\n",
+    "MIN_COUNT_THRESHOLD = 2  # All the tokens with counts less than or equal to this will be ignored from consideration\n",
+    "CO_OCCURENCE_WINDOW = 2  # Consider window of two words to consider to have \"co-occured\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "attempted-disclosure",
+   "execution_count": 20,
+   "id": "direct-lecture",
    "metadata": {},
    "outputs": [],
    "source": [
     "# GET CORPUS\n",
-    "import os\n",
-    "\n",
     "content_files = os.listdir(CORPUS_PATH)\n",
     "\n",
     "all_content = []\n",
@@ -51,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "aware-wings",
+   "execution_count": 21,
+   "id": "viral-convention",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,43 +77,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "forbidden-electricity",
+   "execution_count": 22,
+   "id": "convinced-aaron",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "118872\n"
+      "43355\n"
      ]
     }
    ],
    "source": [
     "# Get unique words and their corresponding count within corpus\n",
-    "from collections import Counter\n",
-    "\n",
     "words_count = Counter()\n",
     "for content in all_content:\n",
     "    cleaned_sentences = clean_and_extract_sentences(content)\n",
     "    for sentence in cleaned_sentences:\n",
     "        words_count.update(sentence)\n",
     "\n",
+    "# Remove low count items\n",
+    "words_count = {k: v for k, v in words_count.items() if v > MIN_COUNT_THRESHOLD}\n",
     "print(len(words_count))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "reflected-function",
+   "execution_count": 23,
+   "id": "encouraging-organic",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to sort :  0.04373979568481445\n",
-      "[('N', 196257), ('छ', 118307), ('लाई', 97504), ('र', 97086), ('भए', 78608), ('गरे', 62055), ('पनि', 61618), ('बाट', 47160), ('छन्', 44599), ('भने', 43731), ('उन', 38068), ('पछि', 34132), ('जना', 32026), ('कोरोना', 30723), ('गर्ने', 29194), ('गर्न', 29012), ('नेपाल', 28924), ('सरकार', 28712), ('हो', 28696), ('लागि', 28022), ('थियो', 27986), ('बताए', 25958), ('सँग', 24939), ('रहे', 22676), ('तर', 21205), ('काठमाडौं', 20913), ('सम्म', 20786), ('तथा', 20768), ('यो', 20537), ('एक', 20387), ('प्रहरी', 19888), ('उनी', 19843), ('नै', 19329), ('दिए', 19163), ('यस', 18618), ('आए', 18368), ('अनुसार', 18278), ('हुने', 17439), ('गरिए', 17165), ('अस्पताल', 17031), ('संक्रमण', 16745), ('थिए', 16371), ('वर्ष', 15877), ('काम', 15818), ('प्रदेश', 15291), ('दिन', 15075), ('हजार', 14773), ('संक्रमित', 14456), ('मात्र', 14356), ('ओली', 14164), ('अहि', 14117), ('प्रधानमन्त्री', 13780), ('जिल्ला', 13638), ('भन्ने', 13377), ('पार्टी', 13238), ('देखि', 13203), ('सबै', 13200), ('समेत', 12917), ('त्यस', 12789), ('मृत्यु', 12760), ('बैठक', 12740), ('क्षेत्र', 12440), ('छैन', 12401), ('गरी', 12240), ('कारण', 12227), ('भन्दा', 12077), ('हामी', 11830), ('अवस्था', 11707), ('जानकारी', 11576), ('कार्यालय', 11559), ('निर्णय', 11521), ('नेपाली', 11425), ('स्वास्थ्य', 11250), ('दुई', 11040), ('भारत', 10936), ('घर', 10676), ('नेता', 10620), ('मन्त्रालय', 10618), ('गरेर', 10533), ('केही', 10221), ('गते', 9794), ('समय', 9660), ('अघि', 9644), ('अध्यक्ष', 9612), ('प्रमुख', 9586), ('भन्दै', 9403), ('परीक्षण', 9399), ('परे', 9252), ('लाख', 9139), ('गर्दै', 9100), ('समिति', 9047), ('देखिए', 8694), ('सय', 8664), ('सहित', 8640), ('स्थानीय', 8518), ('समस्या', 8421), ('नेकपा', 8359), ('त', 8196), ('हुन', 8134), ('हुन्छ', 8053), ('उपचार', 8042), ('रुप', 7940), ('पुष्टि', 7905), ('बारे', 7900), ('जनाए', 7900), ('रुपैयाँ', 7898), ('हुन्', 7863), ('समूह', 7754), ('व्यवस्था', 7751), ('धेरै', 7740), ('विषय', 7621), ('कुरा', 7609), ('पुगे', 7480), ('कार्यक्रम', 7466), ('निर्माण', 7365), ('बताउँछन्', 7351), ('लगायत', 7264), ('गर्दा', 7165), ('संसद', 7164), ('कुनै', 7100), ('डा', 7086), ('देश', 7067), ('भित्र', 7064), ('अब', 7062), ('प्रतिशत', 6895), ('थप', 6871), ('भनेर', 6780), ('लकडाउन', 6722), ('सुरु', 6685), ('बढी', 6629), ('नगरपालिका', 6610), ('स्थित', 6549), ('भयो', 6448), ('सेवा', 6442), ('विकास', 6422), ('माग', 6420), ('भाइरस', 6367), ('नभए', 6362), ('आफू', 6353), ('सदस्य', 6345), ('संख्या', 6269), ('करोड', 6202), ('माथि', 6156), ('अधिकारी', 6154), ('छलफल', 6128), ('बीच', 6120), ('सडक', 6108), ('सञ्चालन', 6104), ('महिला', 6089), ('आफ्नो', 6068), ('नयाँ', 6057), ('तीन', 6049), ('सांसद', 6023), ('मध्ये', 6022), ('बजेट', 5959), ('त्यो', 5916), ('वा', 5728), ('भइरहे', 5704), ('दिने', 5696), ('महिना', 5665), ('कम्पनी', 5590), ('पक्राउ', 5581), ('वर्षीय', 5571), ('पक्ष', 5566), ('क्रम', 5564), ('अन्य', 5518), ('आर्थिक', 5472), ('गाउँपालि', 5464), ('व्यक्ति', 5453), ('बैंक', 5433), ('म', 5395), ('भन्छन्', 5364), ('गए', 5309), ('मन्त्री', 5287), ('जारी', 5206), ('दल', 5194), ('आयोजना', 5184), ('बसे', 5128), ('नि', 5104), ('राष्ट्रिय', 5078), ('प्रस्ताव', 5074), ('तह', 5018), ('के', 4985), ('वटा', 4980), ('तर्फ', 4977), ('अदालत', 4938), ('आयोग', 4871), ('विभिन्न', 4858), ('शर्', 4842), ('नागरिक', 4787), ('कांग्रेस', 4777), ('लागे', 4772), ('व्यवस्थापन', 4756), ('सार्वजनिक', 4756), ('बेला', 4752), ('नियन्त्रण', 4747), ('संविधान', 4725), ('प्रचण्ड', 4720), ('जनता', 4644), ('गर्नुपर्ने', 4623)]\n"
+      "Time taken to sort :  0.01614999771118164\n",
+      "WRITTEN\n"
      ]
     }
    ],
@@ -118,13 +124,124 @@
     "sorted_words_list = sorted(words_count.items(), key=lambda x: x[1], reverse=True)\n",
     "e = time.time()\n",
     "print('Time taken to sort : ', e - s)\n",
-    "print(sorted_words_list[:200])\n",
     "\n",
-    "def a():\n",
-    "    WORDS_COUNT_FILE = 'words_count.txt'\n",
+    "def write_to_file():\n",
     "    with open(WORDS_COUNT_FILE, 'w') as f:\n",
-    "        for k, v in words_count.items():\n",
-    "            f.write(f'{k} {v}\\n')"
+    "        for k, v in sorted_words_list:\n",
+    "            f.write(f'{k} {v}\\n')\n",
+    "write_to_file()\n",
+    "print('WRITTEN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "threaded-watershed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WORD_IDS LOADED\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LOAD WORD IDS\n",
+    "words_ids = dict()\n",
+    "with open(WORDS_COUNT_FILE, 'r') as f:\n",
+    "    for i, line in enumerate(f.readlines()):\n",
+    "        word, _ = line.split()\n",
+    "        words_ids[word] = i\n",
+    "print('WORD_IDS LOADED')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "obvious-spain",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({(3, 4): 2, (3, 5): 2, (1, 3): 2, (1, 2): 1, (2, 3): 1, (4, 5): 1, (2, 4): 1, (1, 5): 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_sentence_cooccurences(sentence_word_ids):\n",
+    "    occurences = Counter()\n",
+    "    for i in range(CO_OCCURENCE_WINDOW):\n",
+    "        shifted = sentence_word_ids[i+1:]\n",
+    "        pairs = zip(sentence_word_ids, shifted)\n",
+    "        sorted_pairs = [tuple(sorted(pair)) for pair in pairs]  # Only work on sorted tuple as (1,2) and (2,1) have same values in the matrix\n",
+    "        occurences.update(Counter(sorted_pairs))\n",
+    "    return occurences\n",
+    "\n",
+    "print(get_sentence_cooccurences([1,2,3,4,5,3,1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "convertible-ethernet",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DONE creating pair cooccurences\n"
+     ]
+    }
+   ],
+   "source": [
+    "pair_cooccurences = Counter()\n",
+    "# Use the sentences list to create coocrurence matrix\n",
+    "for content in all_content:\n",
+    "    cleaned_sentences = clean_and_extract_sentences(content)\n",
+    "    for sentence in cleaned_sentences:\n",
+    "        word_ids = [words_ids[w] for w in sentence if w in words_ids]\n",
+    "        occurences = get_sentence_cooccurences(word_ids)\n",
+    "        pair_cooccurences.update(occurences)\n",
+    "print('DONE creating pair cooccurences')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "pretty-medicaid",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2807077\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'w1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-b980f4615547>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPAIR_COOCCURENCES_FILE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mw1_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw2_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcooccurences\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpair_cooccurences\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{w1.id} {w2.id} {cooccurences}\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Written cooccurences to file {PAIR_COOCCURENCES_FILE}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'w1' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Write pair_cooccurences to a file\n",
+    "print(len(pair_cooccurences))\n",
+    "with open(PAIR_COOCCURENCES_FILE, 'w') as f:\n",
+    "    for (w1_id, w2_id), cooccurences in pair_cooccurences.items():\n",
+    "        f.write(f'{w1_id} {w2_id} {cooccurences}\\n')\n",
+    "print(f'Written cooccurences to file {PAIR_COOCCURENCES_FILE}')"
    ]
   }
  ],
